# jackfield-labeler

./: .editorconfig  .gitignore  .mypy.ini  .pylintrc  404.html  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  create_distribution.sh  create_github_release.sh  index.html  jackfield-labeler.code-workspace  jackfield_labeler.spec  mkdocs.yml  objects.inv  profile.prof  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  postcreate.sh
.github/: DISTRIBUTION.md  dependabot.yml
.github/workflows/: auto-version.yml  build-executables.yml  bump-version.yml  deploy-docs.yml  main.yml  release.yml
CONTRIBUTING/: index.html
activeContext/: index.html
api-reference/: index.html
architecture/: index.html
development/: index.html
docs/: CONTRIBUTING.md  activeContext.md  api-reference.md  architecture.md  development.md  index.md  modules.md  projectbrief.md  status.md  tasks.md  technical.md  user-guide.md
examples/: sample_project.jlp
jackfield_labeler/: __init__.py  __main__.py  app.py
jackfield_labeler/controllers/: __init__.py
jackfield_labeler/models/: __init__.py  color.py  exceptions.py  label_strip.py  segment.py  segment_types.py  strip_settings.py  text_format.py
jackfield_labeler/utils/: __init__.py  logger.py  pdf_generator.py  project_manager.py  strip_renderer.py
jackfield_labeler/views/: __init__.py  designer_tab.py  main_window.py  preview_tab.py  settings_tab.py
projectbrief/: index.html
search/: search_index.json
status/: index.html
technical/: index.html
tests/: conftest.py  test_label_strip.py  test_pdf_generator.py  test_preview_and_png.py
user-guide/: index.html
